# cdk-perl-snapshots

./: BUGS  CHANGES  COPYING  COPYING.asc  Cdk.pm  Cdk.xs  FILES  MANIFEST  MANIFEST.SKIP  Makefile.PL  Makefile.PL.in  NOTES  README  VERSION  aclocal.m4  configure  configure.in  fixpaths
Cdk/: Alphalist.pm  Buttonbox.pm  Calendar.pm  Debug.pm  Diag.pm  Dialog.pm  Entry.pm  Fselect.pm  Graph.pm  Histogram.pm  Itemlist.pm  Label.pm  Marquee.pm  Matrix.pm  Mentry.pm  Menu.pm  Radio.pm  Scale.pm  Scroll.pm  Selection.pm  Slider.pm  Swindow.pm  Template.pm  Viewer.pm
demos/: async  bday  perlbug  pkgInfo  pwdInfo  rolodex  workman
examples/: alphalist  bind  buttonbox  calendar  dialog  entry  fselect  graph  histogram  itemlist  label  marquee  matrix  mentry  menu  postProcess  preProcess  radio  scale  scroll  selection  slider  swindow  template  viewer
fulldemo/: cdkdemo
fulldemo/help/: alphalist.help  calendar.help  charfile.help  colors.help  dialog.help  display.help  entry.help  fselect.help  general.help  itemlist.help  matrix.help  mentry.help  menu.help  postprocess.help  preprocess.help  radio.help  scale.help  scroll.help  selection.help  slider.help  special.help  swindow.help  template.help  viewer.help
package/: cdk-perl.spec
package/debian/: changelog  clean  compress  control  copyright  libcdk-perl.examples  libcdk-perl.lintian-overrides  rules  watch
package/debian/patches/: cdk_viewer.patch  cdkdemo_help.patch  makefile.patch  series
package/freebsd/: Makefile  distinfo
